fixing spacing

--- a/css/style-large.css
+++ b/css/style-large.css
@@ -13,7 +13,7 @@
 /* Banner */
 
 	#banner {
-		padding: 8em 0;
+		padding: 8em;
 	}
 
 		#banner h2 {
