--- a/css/style.css
+++ b/css/style.css
@@ -1055,8 +1055,6 @@
 		#banner .inner {
 			position: relative;
 			z-index: 1;
-			margin-right: 7em;
-			margin-left: 7em;
 			margin-top: 2em;
 			margin-bottom: 2em;
 		}
